--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,24 @@ plugins = [
     "mypy_drf_plugin.main",
 ]
 
+[tool.pylint.main]
+# Add files or directories matching the regular expressions patterns to the
+# ignore-list. The regex matches against paths and can be in Posix or Windows
+# format. Because '\' represents the directory delimiter on Windows systems, it
+# can't be used as an escape character.
+ignore-paths = [".*/migrations/[0-9]{4}_.*.py"]
+
+# Use multiple processes to speed up Pylint. Specifying 0 will auto-detect the
+# number of processors available to use, and will cap the count on Windows to
+# avoid hangs.
+jobs = 0
+
+# List of plugins (as comma separated values of python module names) to load,
+# usually to register additional checkers.
+load-plugins = [
+    "pylint_django"
+]
+
 [tool.pylint.reports]
 # Set the output format. Available formats are text, parseable, colorized, json
 # and msvs (visual studio). You can also give a reporter class, e.g.
