--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,6 +42,13 @@ load-plugins = [
 # mypackage.mymodule.MyReporterClass.
 output-format = "colorized"
 
+[tool.pylint."django foreign keys referenced by strings"]
+# Adds transforms to be able to do type inference for model ForeignKeyField properties
+# which use a string to name the foreign relationship. This uses Django's model name
+# resolution and this checker wraps the setup to ensure Django is able to configure
+# itself before attempting to use the lookups.
+django-settings-module = "tests.settings"
+
 [tool.pytest.ini_options]
 addopts = """
     -ra
