--- a/.gitignore
+++ b/.gitignore
@@ -703,3 +703,6 @@ $RECYCLE.BIN/
 *.lnk
 
 # End of https://www.toptal.com/developers/gitignore/api/linux,windows,macos,vim,emacs,jetbrains+all,visualstudiocode,c,c++,go,java,node,python,rust,helm,bazel
+
+*/migrations
+
