--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
-channels
-django
-django-extensions
-django-filter
-django-guardian
-djangorestframework
-markdown
-pygments
-pyyaml
-sentry-sdk
-uritemplate
+channels==4.0.0
+django==4.1.3
+django-extensions==3.2.1
+django-filter==22.1
+django-guardian==2.4.0
+djangorestframework==3.14.0
+markdown==3.4.1
+pygments==2.13.0
+pyyaml==6.0
+sentry-sdk==1.11.1
+uritemplate==4.1.1
