--- a/Pipfile
+++ b/Pipfile
@@ -7,6 +7,7 @@ name = "pypi"
 channels = "*"
 django = "*"
 django-extensions = "*"
+django-environ = "*"
 django-filter = "*"
 django-guardian = "*"
 djangorestframework = "*"
