--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,12 @@ plugins = [
     "mypy_drf_plugin.main",
 ]
 
+[[tool.mypy.overrides]]
+module = [
+    "environ.*",
+]
+ignore_missing_imports = true
+
 [tool.pylint.main]
 # Add files or directories matching the regular expressions patterns to the
 # ignore-list. The regex matches against paths and can be in Posix or Windows
