--- a/Pipfile
+++ b/Pipfile
@@ -10,7 +10,9 @@ django-extensions = "*"
 django-environ = "*"
 django-filter = "*"
 django-guardian = "*"
+django-polymorphic = "*"
 djangorestframework = "*"
+djangorestframework-jsonapi = "*"
 markdown = "*"
 pygments = "*"
 pyyaml = "*"
