--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,9 @@ django-environ==0.9.0
 django-extensions==3.2.1
 django-filter==22.1
 django-guardian==2.4.0
+django-polymorphic==3.1.0
 djangorestframework==3.14.0
+djangorestframework-jsonapi==6.0.0
 markdown==3.4.1
 pygments==2.13.0
 pyyaml==6.0
