--- a/.gitignore
+++ b/.gitignore
@@ -705,3 +705,4 @@ $RECYCLE.BIN/
 # End of https://www.toptal.com/developers/gitignore/api/linux,windows,macos,vim,emacs,jetbrains+all,visualstudiocode,c,c++,go,java,node,python,rust,helm,bazel
 
 */migrations
+*.http
