--- a/Pipfile
+++ b/Pipfile
@@ -14,6 +14,7 @@ django-polymorphic = "*"
 djangorestframework = "*"
 djangorestframework-jsonapi = "*"
 markdown = "*"
+psycopg2 = "*"
 pygments = "*"
 pyyaml = "*"
 sentry-sdk = "*"
