Add PostgreSQL support in the reset_dev command of api

--- a/.env.dist
+++ b/.env.dist
@@ -22,3 +22,7 @@ DEBUG=True
 # ONLY:
 # * https://djecrety.ir/
 SECRET_KEY=django-secret-key
+
+# Refer to:
+# https://django-environ.readthedocs.io/en/latest/types.html#environ-env-db-url
+DATABASE_URL=postgresql://username:password@host:port/database
